# wxmarkdowneditor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
res/: gui.fbp  gui.xrc
res/icons/: logo.xcf
src/: main.cpp  wxMarkDownEditormainFrame.cpp  wxMarkDownEditormainFrame.h
src/gui/: defaultCss.h  defaultDarkCss.h  wxMarkDownEditorGUI.cpp  wxMarkDownEditorGUI.h
src/icons/: html_code_16.png.h  logo_16.png.h  logo_64.png.h
src/utils/: FileInfo.h  ItemData.h  PreviewUpdateThread.h
